# BreakOut

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: background.h  ball.h  brick.h  constants.h  entity.h  game.h  interactions.h  paddle.h  powerup.h
src/: background.cpp  ball.cpp  brick.cpp  entity.cpp  game.cpp  interactions.cpp  main.cpp  paddle.cpp  powerup.cpp
